[gd_scene load_steps=2 format=2]

[ext_resource path="res://Actors/Enemy/DamageArea.gd" type="Script" id=1]

[node name="DamageArea" type="Area2D"]
collision_layer = 32
collision_mask = 2
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_DamageArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_DamageArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
